# sec-report-kit

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
docs/: disclaimer.md  index.html  roadmap.md  schema.md
docs/reports/: agent-tesla-malware-triage-report.html  cve-2023-38831.html  cve-2025-24813.html  lumma-stealer-malware-triage-report.html
examples/cve/: CVE-2025-29927.yml  cve-2021-41773.yaml  cve-2023-38831.yaml  cve-2025-24813.yaml  cve-2025-29927.yaml
examples/malware/: Lumma_Stealer.yml  agent-tesla-triage.yaml  lumma-stealer-triage.yaml
examples/outputs/: agent-tesla-malware-triage-report.docx  agent-tesla-malware-triage-report.html  agent-tesla-malware-triage-report.md  cve-2021-41773.docx  cve-2021-41773.html  cve-2021-41773.md  cve-2023-38831.docx  cve-2023-38831.html  cve-2023-38831.md  cve-2025-24813.docx  cve-2025-24813.md  cve-2025-29927.docx  cve-2025-29927.html  cve-2025-29927.md  demo-web-application.docx  demo-web-application.html  demo-web-application.md  lumma-stealer-malware-triage-report.docx  lumma-stealer-malware-triage-report.md
examples/pentest/: sample-web-finding.yaml
rules/sigma/: infostealer_browser_credential_access.yml  nextjs_suspicious_middleware_header.yml  suspicious_archive_child_process.yml  tomcat_suspicious_file_handling_request.yml
rules/yara/: agent_tesla_triage.yar  lumma_stealer_triage.yar
scripts/: build_index.py
sec_report_kit/: cli.py  docx_renderer.py  renderer.py  schema.py  validators.py
templates/: base.html.j2  base.md.j2
tests/: test_renderer.py  test_schema.py
